k8s/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking-service
          image: jericho-bsr/booking-service:latest
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
