k8s/trip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip
  template:
    metadata:
      labels:
        app: trip
    spec:
      containers:
        - name: trip-service
          image: jericho-bsr/trip-service:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: trip-service
spec:
  selector:
    app: trip
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
